force-app/main/default/objects/pp_AutomationBypass__c/pp_AutomationBypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configure automation bypass globally or for specific user/profile</description>
    <label>Automation Bypass</label>
</CustomObject>