force-app/main/default/objects/pp_AutomationBypass__c/fields/Enable_Flow_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Enable_Flow_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Flow Bypass</label>
    <type>Checkbox</type>
</CustomField>