force-app/main/default/objects/pp_AutomationBypass__c/fields/Enable_Validation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Enable_Validation_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Validation Bypass</label>
    <type>Checkbox</type>
</CustomField>